# polyv

./: .gitignore  CMakeLists.txt  README.md  encrypted.ld  infect.sh  polyv.h  sandbox.sh
client/: CMakeLists.txt
client/src/: crypt.cpp  crypt.hpp  main.cpp  payload.cpp  payload.hpp
client/src/platform/: linux.cpp
client2/: CMakeLists.txt
client2/src/: main.cpp
ignite/: CMakeLists.txt
ignite/src/: main.cpp
include/: polyv.hpp
lib/: CMakeLists.txt
lib/src/: polyv.cpp  polyv.hpp
linker/: CMakeLists.txt  main.cpp  payload.cpp  payload.hpp  payload.ld
sandbox/: polyv_client  polyv_target_to_infect
